--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.8.2",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux-saga": "^1.1.3",
