--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.8.2",
-    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
