--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-query": "^3.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
