--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mars-shop-fe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/wp-content/plugins/react-shop/widget/build",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "jss-increase-specificity": "^0.3.5",
     "query-string": "^4.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
